--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "fs": "^0.0.2",
     "discord.js": "^11.5.1",
     "flatted": "^2.0.1",
-    "ansi_up": "^4.0.2"
+    "ansi_up": "^4.0.2",
+    "jsdom": "^15.1.1",
+    "turndown": "^5.0.3"
   },
   "engines": {
     "node": "8.x"
